Fixed spelling mistakes

--- a/topic-3/book-1/05.MovieDetails_Components.md
+++ b/topic-3/book-1/05.MovieDetails_Components.md
@@ -98,9 +98,9 @@ const MovieDetails: React.FC<MovieDetailsProps> = (movie) => {
 };
 export default MovieDetails;
 ~~~
-This component uses Material's Clip (see [here](https://material-ui.com/components/chips/)) and Floating Action Button (see [here](https://material-ui.com/components/floating-action-button/)) components. We will add a click handler to the button later. The styling code demonstrates:
+This component uses Material's Chip (see [here](https://material-ui.com/components/chips/)) and Floating Action Button (see [here](https://material-ui.com/components/floating-action-button/)) components. We will add a click handler to the button later. The styling code demonstrates:
 
-+ A default Material Theme is inherited by all our components. It declares app-wide properties and guarantees consistent styling. We can access the theme using: `makeStyles((theme) => ({ ...})`. It allows us to customize the theme.
++ A default Material Theme is inherited by all our components. It declares app-wide properties and guarantees consistent styling. We can access the theme using: `makeStyles((theme) => ({ ...})`. It allows us to customise the theme.
 
 A component can have a mixture of static and dynamically generated JSX. In the excerpt below, we are constructing a movie's list of genres at runtime:
 ~~~tsx
