--- a/topic-4/book-1/01.Routing.md
+++ b/topic-4/book-1/01.Routing.md
@@ -8,7 +8,7 @@ Initially, the app will support two routes:
 In general, the top component in an app's component hierarchy is concerned with routing. In `src/index.tsx`, replace the entire content with the following code:
 ~~~tsx
 import React from "react";
-import ReactDOM from 'react-dom/client'
+import ReactDOM from "react-dom/client";
 import { BrowserRouter, Route, Navigate, Routes } from "react-router-dom";
 import HomePage from "./pages/homePage";
 import MoviePage from "./pages/movieDetailsPage";
