--- a/topic-4/book-1/02.TMDB_API.md
+++ b/topic-4/book-1/02.TMDB_API.md
@@ -107,7 +107,7 @@ import { Link } from "react-router-dom";
 
 This modification means clicking a card's 'More Info' button will change the browser's URL address, for example, to this:
 
-> http://127.0.0.1:5173//movies/475557
+> http://127.0.0.1:3000/movies/475557
 
 This URL pattern  matches the first Route in the app's routing configuration (see `src/index.tsx`):
 ~~~tsx
@@ -166,7 +166,7 @@ const MoviePage: React.FC= () => {
 
 Some observations on the above code:
 
-+ The useParams hook (from react-router) allows the component to extract the movie id from the browser's parameterized URL address. 
++ The useParams hook (from react-router) allows the component to extract the movie id from the browser's parameterised URL address. 
 + The first useEffect hook uses the API's movie endpoint (read more [here][movie]) to get the full details on the film. 
 + The second useEffect gets the set of images for the same movie.
 
