--- a/topic-4/book-1/04.Favorites.md
+++ b/topic-4/book-1/04.Favorites.md
@@ -1,6 +1,6 @@
 ## Tagging favourite movies.
 
-On the Home page, we can tag a movie as one of our favourites by clicking its 'Favourite' icon. This tagging will cause the related card to show a red Favourite Icon on the title bar. As a temporary solution, we will record a tagging by adding a 'favourite' property to the movie object and set it to true. [A more realistically approach is to persist them to a database via an API.] 
+On the Home page, we can tag a movie as one of our favourites by clicking its 'Favourite' icon. This tagging will cause the related card to show a red Favourite Icon on the title bar. As a temporary solution, we will record a tagging by adding a 'favourite' property to the movie object and set it to true. [A more realist approach is to persist them to a database via an API.] 
 
 ![][favorites]
 
@@ -184,7 +184,7 @@ ReactDOM.createRoot(document.getElementById('root')!).render(
 )
 
 ~~~
-We must restart the development server whenever we nake routing configuration changes:
+We must restart the development server whenever we make routing configuration changes:
 ~~~
 $ npm run dev
 ~~~
