--- a/topic-5/book-1/00.Lab-Movie_App-Part3.md
+++ b/topic-5/book-1/00.Lab-Movie_App-Part3.md
@@ -13,5 +13,5 @@ We will use two new React coding techniques in the implementation:
 + A **Component Composition** pattern.
 + **Custom hooks.**
 
-Also, we will utilize the Extended Link routing featured.
+Also, we will utilise the Extended Link routing featured.
 
