--- a/topic-6/book-1/01.DataFetching.md
+++ b/topic-6/book-1/01.DataFetching.md
@@ -5,7 +5,7 @@ Should each component that requires data from the backend/API be responsible for
 + Ideally, yes, but it should not call the API every time the component is remounted, particularly if the API data changes infrequently. 
 + No, if the component must share the data with other sibling components.
 
-Should we centralising an app's data management in a high-level component and use props to pass it to subordinates? 
+Should we centralise the app's data management in a high-level component and use props to pass it to subordinates? 
 
 + Yes, but only when many components use the data - shared data. 
 
